# open-urbex

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: black.yml  flake8.yml  test.yml
IO/Scripts/: bltra.ipynb  urbex.ipynb
IO/Scripts/Modules/: netx.py  rasters.py  setup.py  terrain.py  utilities.py  vectors.py
IO/Scripts/Tests/: test_netx.py  test_rasters.py  test_setup.py  test_terrain.py  test_utilities.py  test_vectors.py
Tests/: test_netx.py  test_rasters.py  test_setup.py  test_terrain.py  test_utilities.py  test_vectors.py
Tests/Test_Data/test_netx/: nodes2cc_test_lines.dbf  nodes2cc_test_lines.sbn  nodes2cc_test_lines.sbx  nodes2cc_test_lines.shp  nodes2cc_test_lines.shp.xml  nodes2cc_test_lines.shx  nodes2cc_test_multipoints.dbf  nodes2cc_test_multipoints.shp.xml  nodes2cc_test_nodes.dbf  nodes2cc_test_nodes.sbn  nodes2cc_test_nodes.sbx  nodes2cc_test_nodes.shp  nodes2cc_test_nodes.shp.xml  nodes2cc_test_nodes.shx  nodes2cc_test_polygons.dbf  nodes2cc_test_polygons.sbn  nodes2cc_test_polygons.sbx  nodes2cc_test_polygons.shp  nodes2cc_test_polygons.shp.xml  nodes2cc_test_polygons.shx
Tests/Test_Data/test_rasters/array_2_tif/: array_2_tiff_test_Points.dbf  array_2_tiff_test_Points.shp  array_2_tiff_test_Points.shp.xml  array_2_tiff_test_Points.shx
Tests/Test_Data/test_rasters/coreg_rast/: Test_Random_Raster.tif  Test_Random_Raster_BigShape.tif  Test_Random_Raster_Nulls.asc  Test_Random_Raster_SmallCell.tif  Test_Random_Raster_SmallShape.tif
Tests/Test_Data/test_rasters/export_kde_rast/: Test_nodes.dbf  (+2 more)
(+41 files in other folders)
